ionos_sbx/domains/domains_cs-identity-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cs-identity-keycloak-2
  namespace: cs-identity
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-sbx-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: cs-identity.dome-marketplace.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: cs-identity-keycloak
                port:
                  name: http
  tls:
    - hosts:
        - cs-identity.dome-marketplace.io
      secretName: cs-identity-tls-2
