ionos_sbx/domains/domains_dome-wallet-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dome-wallet-ui-2
  namespace: in2
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-sbx-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: wallet.dome-marketplace.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dome-wallet-ui
                port:
                  number: 8080
  tls:
    - hosts:
        - wallet.dome-marketplace.io
      secretName: wallet-secret-tls-2
