ionos_sbx/domains/domains_verifier-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: verifier-marketplace-vcverifier-2
  namespace: marketplace
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-sbx-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: verifier.dome-marketplace.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: verifier-marketplace-vcverifier
                port:
                  number: 3000
  tls:
    - hosts:
        - verifier.dome-marketplace.io
      secretName: verifier-tls-sec-2
