ionos_sbx/domains/domains_waltid-certs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: walt-id-vcwaltid-certs-2
  namespace: marketplace
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-sbx-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: dome-marketplace.io
      http:
        paths:
          - path: /certs
            pathType: Prefix
            backend:
              service:
                name: walt-id-vcwaltid-certs
                port:
                  number: 3000
  tls:
    - hosts:
        - dome-marketplace.io
      secretName: walt-id-vcwaltid-tls-sec-2
